# profAssistant

./: .env.docker.example  .env.example  .gitignore  FILE_UPLOAD_FEATURE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  playground.ipynb  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.mcp  config.py  main.py  mcp_test.ipynb  playground.ipynb  pyproject.toml  rate_limit.py
backend/agent/: common.py  course_outline_generator.py  file_processor.py  graph.py  input_sanitizer.py  lesson_plan_generator.py  model.py  prompt_enhancer.py  prompt_shared.py  simple.py  structured_course_outline_generator.py  tool_config.py  tools.py
backend/agent/assessment/: __init__.py  generator.py  graph.py  prompts.py  state.py
backend/agent/assessment/nodes/: __init__.py  build_messages.py  evaluation.py  initialize_conversation.py  response.py
backend/agent/base/: __init__.py  state.py
backend/agent/course_outline/: __init__.py  dummy_generator.py  generator.py  graph.py  nodes.py  prompts.py  state.py
backend/agent/lesson_plan/: __init__.py  generator.py  graph.py  prompts.py  state.py
backend/agent/presentation/: __init__.py  generator.py  graph.py  prompts.py  state.py
backend/routes/: __init__.py  auth.py  conversations.py  generation.py
backend/schemas/: assessment.py  conversation.py  course_class.py  course_outline.py  course_outline_schema.py  evaluation.py  lesson_plan.py  presentation.py  user.py
backend/services/: __init__.py  api_key_service.py  auth_service.py  conversation_manager.py  database.py  mcp_client.py  pptx_service.py  rag_pipeline.py  session_repository.py  user_repository.py  user_settings_repository.py
backend/test_and_evals/: README.md  conftest.py
backend/test_and_evals/01_system_and_security/: README.md
backend/test_and_evals/02_ai_evaluation/: README.md
backend/test_and_evals/03_performance_and_cost/: README.md
backend/utils/: api_helpers.py  context_builders.py  file_processor.py  sse.py
(+195 files in other folders)
