[project]
name = "langgraph-oktatasi-seged"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.49.1",
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langsmith>=0.4.37",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
