[project]
name = "langgraph-oktatasi-seged"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "gradio>=5.49.1",
    "langchain>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langsmith>=0.4.37",
    "openai>=2.4.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "python-multipart>=0.0.9",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
